# cpp-challenge

./: .gitignore  .gitmodules  README.md
p1/: CMakeLists.txt  main.cpp
p100-face-recognition/: CMakeLists.txt  README.md  main.cpp
p15/: CMakeLists.txt  main.cpp
p16/: iprange.h  main.cpp
p18/: main.cpp
p2/: CMakeLists.txt  main.cpp
p20/: main.cpp
p22/: main.cpp
p94-openssl/: .gitignore  CMakeLists.txt  README.md  main.cpp  ref.cpp  sign.h  verify.h
p94-openssl/with-cli-openssl/: README.md  data.txt.sha256
p96-fizz-buzz/: CMakeLists.txt  main.cpp
p96-fizz-buzz/node-server/: client.js  package.json  server.js
p97-my-curl/: CMakeLists.txt  README.md  main.cpp
p99-language-translate/: CMakeLists.txt  README.md  main.cpp
template/: CMakeLists.txt  main.cpp
